@@ -47,6 +47,10 @@ Version 1.3.8+svn:
   * Unit changes and balancing
     * Created undead variations for the 'bat' and 'gryphon' race.
 
+  * Miscellaneous and bug fixes
+    * Map label length is properly calculated and has been reduced 
+      to 32 characters.  
+
 Version 1.3.8:
   * Campaigns
     * Descent into Darkness
