@@ -23,7 +23,7 @@
 #include "wassert.hpp"
 
 namespace {
-	const size_t max_label_size = 64;
+	const size_t max_label_size = 32;
 }
 
 //our definition of map labels being obscured is if the tile is obscured,
@@ -501,9 +501,16 @@ bool terrain_label::visible() const
 
 void terrain_label::check_text_length()
 {
-	if (text_.size() > parent_->get_max_chars())
-	{
-		text_.resize(parent_->get_max_chars());
+	// The actual data is wide_strings so test in wide_string mode
+	// also cutting a wide_string at an arbritary place gives odd 
+	// problems. 
+	//
+	//! @todo It might be an option to use wide_string as type for
+	// the labels to avoid this conversion
+	wide_string tmp = utils::string_to_wstring(text_);
+	if(tmp.size() >  parent_->get_max_chars()) {
+		tmp.resize(parent_->get_max_chars());
+		text_ = utils::wstring_to_string(tmp);
 	}
 }
 
